Fix for screen clearing
Signed-off-by: daniml3 <danimoral1001@gmail.com>