@@ -14,12 +14,12 @@ public class Utils {
     public static void clearScreen() {
         try {
             if (System.getProperty("os.name").toLowerCase().contains("windows")) {
-                Runtime.getRuntime().exec("cmd /c cls");
+                new ProcessBuilder("cmd","/c","cls").inheritIO().start().waitFor();
             } else {
                 System.out.print("\033[H\033[2J");
                 System.out.flush();
             }
-        } catch (IOException e) {
+        } catch (IOException | InterruptedException e) {
             InterfaceHandler.addWarning("Could not clear the screen correctly", 10);
             InterfaceHandler.addStackTrace(Utils.stackTraceToString(e));
         }
